Added Leaderboard class, attempted flag display on mineClick

--- a/MinesweeperWPF/MinesweeperWPF.csproj
+++ b/MinesweeperWPF/MinesweeperWPF.csproj
@@ -91,6 +91,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="ImageWorker.cs" />
+    <Compile Include="Leaderboard.cs" />
     <Compile Include="MineGrid.cs" />
     <Compile Include="LoginWindow.xaml.cs">
       <DependentUpon>LoginWindow.xaml</DependentUpon>
@@ -120,6 +121,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="Assets\leaderboard.dat" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
